...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.udacity.project5.moonstore.savereminder.selectreminderlocation.SelecLocationFragment" />

        <TextView
            android:id="@+id/confirmPOI"
            android:layout_width="@dimen/button_width_large"
            android:layout_height="@dimen/button_height_large"
            android:layout_marginBottom="44dp"
            android:background="@color/darkPink"
            android:gravity="center"
            android:visibility="gone"
...
