...
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/storeRecyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:dataList="@{viewModel.storeItemList}"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
